; ModuleID = '/home/carl/AnghaBench/linux/kernel/debug/kdb/extr_kdb_main.c_kdb_dumpregs.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/debug/kdb/extr_kdb_main.c_kdb_dumpregs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32 }

@console_loglevel = common dso_local global i32 0, align 4
@CONSOLE_LOGLEVEL_MOTORMOUTH = common dso_local global i32 0, align 4
@kdb_trap_printk = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pt_regs*)* @kdb_dumpregs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kdb_dumpregs(%struct.pt_regs* %0) #0 {
  %2 = alloca %struct.pt_regs*, align 8
  %3 = alloca i32, align 4
  store %struct.pt_regs* %0, %struct.pt_regs** %2, align 8
  %4 = load i32, i32* @console_loglevel, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @CONSOLE_LOGLEVEL_MOTORMOUTH, align 4
  store i32 %5, i32* @console_loglevel, align 4
  %6 = load i32, i32* @kdb_trap_printk, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @kdb_trap_printk, align 4
  %8 = load %struct.pt_regs*, %struct.pt_regs** %2, align 8
  %9 = call i32 @show_regs(%struct.pt_regs* %8)
  %10 = load i32, i32* @kdb_trap_printk, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* @kdb_trap_printk, align 4
  %12 = call i32 @kdb_printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* %3, align 4
  store i32 %13, i32* @console_loglevel, align 4
  ret void
}

declare dso_local i32 @show_regs(%struct.pt_regs*) #1

declare dso_local i32 @kdb_printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
